--- a/AtkTennisWeb/Views/Report/SecretaryOperations.cshtml
+++ b/AtkTennisWeb/Views/Report/SecretaryOperations.cshtml
@@ -1,11 +1,11 @@
-﻿@model Helpers.Dto.PartialViewDtos.BalanceOpViewModel;
-
+﻿@model Helpers.Dto.PartialViewDtos.SecretaryOpViewDto;
 @using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor;
 
 @{
     var CompId = HttpContextAccessor.HttpContext.Session.GetString("CompId");
 }
+
 <style>
     button {
         border: none !important;
@@ -54,47 +54,29 @@
                             <table id="example1" class="table table-bordered table-hover">
                                 <thead>
                                     <tr style="text-align:center">
-                                        <th>Üye Numarası</th>
+                                        <th>Bilgi</th>
                                         <th>Adı - Soyadı</th>
-                                        <th>Yatırılan Ücret</th>
-                                        <th>Ödeme Alan</th>
-                                        <th>Ödeme Alan Numara</th>
-                                        <th>Ödeme Alan Yetki</th>
                                         <th>Tarih</th>
+                                     
                                     </tr>
                                 </thead>
                                 <tbody>
 
-                                    @foreach (var item in Model.balanceOpModels.OrderByDescending(x => x.Date))
+                                    @foreach (var item in Model.balanceOpModels)
                                     {
-                                        if (item.CompanyId == CompId)
+                                        if (item.CompId == CompId)
                                         {
 
 
                                             <tr style="text-align:center" id="">
                                                 @{
-                                                    var mem = Model.memberLists.Where(x => x.UserId == item.MemberId).ToList();
-                                                    var mem2 = Model.memberLists.Where(x => x.UserId == item.AdminId).ToList();
+                                                    var mem = Model.memberLists.Where(x => x.UserId == item.AdminId).ToList();
+
                                                 }
 
-                                                <td>@mem[0].MemberNumber</td>
+                                                <td>@item.Text</td>
                                                 <td>@mem[0].FullName</td>
-                                                <td>@item.Price</td>
-                                                <td>@mem[0].FullName</td>
-                                                <td>@mem[0].MemberNumber</td>
-
-                                                @if (mem[0] != mem2[0])
-                                                {
-                                                    <td>@mem2[0].Role</td>
-                                                }
-
-                                                else
-                                                {
-                                                    <td>Üye Kendisi</td>
-                                                }
-
                                                 <td>@item.Date</td>
-
 
                                             </tr>
                                         }
