--- a/AtkTennisWeb/Views/Report/DebtReports.cshtml
+++ b/AtkTennisWeb/Views/Report/DebtReports.cshtml
@@ -41,7 +41,6 @@
 
                             <div style="margin:8px" id="TimeInf"><h4 id="timeInfH4" style="margin:auto; color:black"><i style="color:black" class="fas fa-flag nav-icon"></i> 05-10-2021  -  Salı </h4></div>
 
-
                             <div style="margin-top:8px">
                                 <nav style="margin-right:20px" aria-label="Page navigation example">
                                     <ul class="pagination">
@@ -72,7 +71,6 @@
                             </div>
                         </div>
                     </div>
-
 
                     <div id="appendResInf" class="card" style="border-radius:30px">
 
@@ -123,7 +121,7 @@
 </div>
 
 <script src="~/lib/jquery/dist/linq.min.js"></script>
-
+<script src="~/adminRoot/js/loading.js"></script>
 <script>
 
     function myfunction() {
@@ -143,16 +141,19 @@
             "bDestroy": true
            
         })
-            .buttons().container().appendTo('#example2_wrapper , #example3_wrapper , #example4_wrapper , #example5_wrapper , #resList_wrapper , #resList2_wrapper , #resList3_wrapper , #dues1_wrapper , #dues2_wrapper .col-md-6:eq(0)');
-            
+           .buttons().container().appendTo('#example2_wrapper , #example3_wrapper , #example4_wrapper , #example5_wrapper , #resList_wrapper , #resList2_wrapper , #resList3_wrapper , #dues1_wrapper , #dues2_wrapper .col-md-6:eq(0)');           
     }
-
-
-
 
     var compId = $("#compId").text();
 
     function memberDuesDebtList() {
+
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
 
         $.ajax({
 
@@ -297,6 +298,7 @@
 
                 $("#appendResInf2").append(row);
 
+                setTimeout(function () { $("body").loading('destroy'); });
 
                 myfunction();
 
@@ -311,6 +313,13 @@
     }
 
     function memberCabinetDuesList() {
+
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
 
         $.ajax({
 
@@ -450,6 +459,9 @@
 
                 $("#appendResInf2").append(row);
 
+                setTimeout(function () { $("body").loading('destroy'); });
+
+
                 myfunction();
 
             },
@@ -463,6 +475,13 @@
     }
 
     function getRes() {
+
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
 
         $.ajax({
 
@@ -520,6 +539,8 @@
                             row += '<td style="background-color:#EF5350">' + res.duesInf[i].paymentLog.refId + '</td>';
                         }
 
+                        debugger;
+
                         row += '<td>' + memberInf[0].memberNumber + '</td>';
                         row += '<td>' + memberInf[0].fullName + '</td>';
                         row += '<td>' + "Rezervasyon Ödemesi" + '</td>';
@@ -527,7 +548,11 @@
                         row += '<td style="font-weight:bold">' + res.duesInf[i].paymentLog.price + "₺" + '</td>';
                         row += '<td style="font-weight:bold">' + res.duesInf[i].paymentLog.paidPrice + "₺" + '</td>';
                         row += '<td style="font-weight:bold">' + res.duesInf[i].paymentLog.remainingPrice + "₺" + '</td>';
-                        row += '<td>' + getPayment[0].fullName + '</td>';
+                        if (getPayment.length != 0) {
+                            row += '<td>' + getPayment[0].fullName + '</td>';
+                        }
+                        else
+                        row += '<td>' + "-"+ '</td>';
                         row += '<td>' + res.duesInf[i].paymentLog.date + '</td>';
                         row += '<td>' + res.duesInf[i].paymentLog.explain + '</td>';
 
@@ -543,6 +568,8 @@
 
 
                 $("#appendResInf").append(row);
+
+                setTimeout(function () { $("body").loading('destroy'); });
 
                 memberResDebtList();
                 
@@ -887,6 +914,5 @@
             }
         });
     }
-
 
 </script>
